--- a/components/news-card.html
+++ b/components/news-card.html
@@ -12,7 +12,7 @@
 
         <a
             class="btn btn-primary "
-            href="/news-details.html"
+            href="//deployment/news-details.html"
             role="button"
         > قراءة المزيد</a>
 
