--- a/components/footer.html
+++ b/components/footer.html
@@ -9,32 +9,32 @@
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
                             aria-current="page"
-                            href="/about.html"
+                            href="//deployment/about.html"
                         >نبذة عن المركز</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/news.html"
+                            href="//deployment/news.html"
                         >الأخبار والأحداث</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/service.html"
+                            href="//deployment/service.html"
                         >الخدمات</a>
                     </li>
 
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/terminology.html"
+                            href="//deployment/terminology.html"
                         >المصطلحات</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/site-map.html"
+                            href="//deployment/site-map.html"
                         >خريطة الموقع</a>
                     </li>
 
@@ -54,13 +54,13 @@
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/support.html"
+                            href="//deployment/support.html"
                         >بلاغ عن فساد</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/contact-us.html"
+                            href="//deployment/contact-us.html"
                         >تواصل معنا</a>
                     </li>
                 </ul>
@@ -203,20 +203,20 @@
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/terms.html"
+                    href="//deployment/terms.html"
                 >الشروط والأحكام</a>
             </li>
 
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/privacy.html"
+                    href="//deployment/privacy.html"
                 >سياسة الخصوصية</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/freedom.html"
+                    href="//deployment/freedom.html"
                 >حرية الحصول على المعلومات</a>
             </li>
         </ul>
