--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,7 +4,7 @@
         <!-- Logo -->
         <a
             class="navbar-brand m-0"
-            href="/index.html"
+            href="//deployment/index.html"
         >
             <img
                 src="images/ncim.png"
@@ -35,13 +35,13 @@
                     <a
                         class="nav-link active"
                         aria-current="page"
-                        href="/index.html"
+                        href="//deployment/index.html"
                     >الرئيسية</a>
                 </li>
                 <li class="nav-item dropdown position-static">
                     <a
                         class="nav-link gap-2"
-                        href="/about.html"
+                        href="//deployment/about.html"
                         id="navbarDropdown"
                         role="button"
                         data-bs-toggle="dropdown"
@@ -59,14 +59,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">عن المركز</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/about.html"
+                                        href="//deployment/about.html"
                                     >
                                         <img src="images/icons/check.svg">
                                         <span>نبذة عن المركز</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/structure.html"
+                                        href="//deployment/structure.html"
                                     >
                                         <img src="images/icons/stucture.svg">
                                         <span>الهيكل التنظيمي</span>
@@ -76,14 +76,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">من نخدم</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/owners-and-individuals.html"
+                                        href="//deployment/owners-and-individuals.html"
                                     >
                                         <img src="images/icons/bussiness.svg">
                                         <span>أصحاب العمل والأفراد</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/gov.html"
+                                        href="//deployment/gov.html"
                                     >
                                         <img src="images/icons/gov.svg">
                                         <span>الجهات الحكومية والمنفذة</span>
@@ -93,14 +93,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">الأنظمة والمصطلحات</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/rules-and-regulations.html"
+                                        href="//deployment/rules-and-regulations.html"
                                     >
                                         <img src="images/icons/ins.svg">
                                         <span>الأنظمة واللوائح</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/terminology.html"
+                                        href="//deployment/terminology.html"
                                     >
                                         <img src="images/icons/dictionary.svg">
                                         <span>المصطلحات</span>
@@ -110,21 +110,21 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">الشفافية والحوكمة</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/reports.html"
+                                        href="//deployment/reports.html"
                                     >
                                         <img src="images/icons/chart.svg">
                                         <span>التقارير السنوية</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/privacy.html"
+                                        href="//deployment/privacy.html"
                                     >
                                         <img src="images/icons/policy.svg">
                                         <span>سياسة الخصوصية</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/freedom.html"
+                                        href="//deployment/freedom.html"
                                     >
                                         <img src="images/icons/freedom.svg">
                                         <span>حرية الحصول على المعلومات</span>
@@ -137,37 +137,37 @@
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/news.html"
+                        href="//deployment/news.html"
                     >الأخبار والأحداث</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/services.html"
+                        href="//deployment/services.html"
                     >الخدمات</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/support.html"
+                        href="//deployment/support.html"
                     >المساعدة والدعم</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/contact-us.html"
+                        href="//deployment/contact-us.html"
                     >تواصل معنا</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/faq.html"
+                        href="//deployment/faq.html"
                     >الأسئلة الشائعة</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/site-map.html"
+                        href="//deployment/site-map.html"
                     >خريطة الموقع</a>
                 </li>
             </ul>
@@ -177,7 +177,7 @@
                 <a
                     class="btn border-0"
                     role="button"
-                    href="/map.html"
+                    href="//deployment/map.html"
                 >
                     <img src="images/icons/search.svg">
                 </a>
@@ -259,7 +259,7 @@
                 <a
                     class="nav-link active"
                     aria-current="page"
-                    href="/index.html"
+                    href="//deployment/index.html"
                 >الرئيسية</a>
             </li>
 
@@ -267,7 +267,7 @@
             <li class="nav-item dropdown">
                 <a
                     class="nav-link d-flex justify-content-between align-items-center"
-                    href="/about.html"
+                    href="//deployment/about.html"
                     id="mobileDropdown"
                     role="button"
                     data-bs-toggle="dropdown"
@@ -285,7 +285,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/about.html"
+                            href="//deployment/about.html"
                         >
                             <img
                                 src="images/icons/check.svg"
@@ -295,7 +295,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/structure.html"
+                            href="//deployment/structure.html"
                         >
                             <img
                                 src="images/icons/stucture.svg"
@@ -312,7 +312,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/owners-and-individuals.html"
+                            href="//deployment/owners-and-individuals.html"
                         >
                             <img
                                 src="images/icons/bussiness.svg"
@@ -322,7 +322,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/gov.html"
+                            href="//deployment/gov.html"
                         >
                             <img
                                 src="images/icons/gov.svg"
@@ -339,7 +339,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/rules-and-regulations.html"
+                            href="//deployment/rules-and-regulations.html"
                         >
                             <img
                                 src="images/icons/ins.svg"
@@ -349,7 +349,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/terminology.html"
+                            href="//deployment/terminology.html"
                         >
                             <img
                                 src="images/icons/dictionary.svg"
@@ -366,7 +366,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/reports.html"
+                            href="//deployment/reports.html"
                         >
                             <img
                                 src="images/icons/chart.svg"
@@ -376,7 +376,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/privacy.html"
+                            href="//deployment/privacy.html"
                         >
                             <img
                                 src="images/icons/policy.svg"
@@ -386,7 +386,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/freedom.html"
+                            href="//deployment/freedom.html"
                         >
                             <img
                                 src="images/icons/freedom.svg"
@@ -400,37 +400,37 @@
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/news.html"
+                    href="//deployment/news.html"
                 >الأخبار والأحداث</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/services.html"
+                    href="//deployment/services.html"
                 >الخدمات</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/support.html"
+                    href="//deployment/support.html"
                 >المساعدة والدعم</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/contact-us.html"
+                    href="//deployment/contact-us.html"
                 >تواصل معنا</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/faq.html"
+                    href="//deployment/faq.html"
                 >الأسئلة الشائعة</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/site-map.html"
+                    href="//deployment/site-map.html"
                 >خريطة الموقع</a>
             </li>
 
